2004-08-11  Stipe Tolj  <stolj@wapme.de>
    * various files: a generic spellchecking patch to fix mis-spelling.
      Mainly this fixes bad-english comments in source files.
      Thanks a lot to Pedro for the provided patch. NO LOGIC CHHANGE!
      [Msg-ID: <411A3291.4090906@netcabo.pt>]

2004-08-11  Stipe Tolj  <stolj@wapme.de>
    * gw/smsc/smpp_pdu.c: fixing a warning statement, for nulterminated string
      length checking of PDU elements. This should be not confusing users.
      Thanks to Alan McNatty for pointing to this.

2004-08-09 Alexander Malysh <olek2002 at hotmail.com>
    * gwlib/gw-rwlock.c: catch 'pthread_rwlock_init' errors too.

2004-08-08 Alexander Malysh <olek2002 at hotmail.com>
    * gwlib/log.c: more fixes for compiler format warnings.

2004-08-08 Alexander Malysh <olek2002 at hotmail.com>
    * gw-config.h.in: define 'PRINTFLIKE' here, so we ca use this everywhere.
    * gwlib/log.h: removed 'PRINTFLIKE' and 'PRINTFLIKE2' from here and fixed functions
      declaration.
    * gw/bb_alog.c, gwlib/accesslog.h, wap/wsp_headers.c, wmlscript/wserror.h: fixed 
      compiler format warnings.

2004-08-08 Alexander Malysh <olek2002 at hotmail.com>
    * gwlib/gw-rwlock.[ch], gw/dlr_mem.c, gw/bb_smscconn.c: got
      rid of PTHREAD_RWLOCK_INITIALIZER because it's not on opengroup
      standard (PTHREAD_RWLOCK_INITIALIZER is deleted for alignment with
      IEEE Std 1003.1j-2000).

2004-08-08  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * gw/smsbox.c: fix double encoding when transcoding from UCS2 to 
      UTF-8 or ISO-8859-1

2004-08-07  Stipe Tolj  <stolj@wapme.de>
    * doc/userguide/userguide.xml: parsed the beast via aspell and got
      rid of some grammer and spelling issues.

2004-08-07 Alexander Malysh <olek2002 at hotmail.com>
    * gw/sms.c: fixed whitespaces.

2004-08-05 Alexander Malysh <olek2002 at hotmail.com>
    * gw/gw/bb_smscconn.c: applied patch that makes it possible to